--- a/join.html
+++ b/join.html
@@ -4,14 +4,14 @@
 
 <head>
     <meta charset="utf-8">
-
     <title>Western UES</title>
     <meta name="description" content="Western UES">
     <meta name="author" content="UES">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css?v=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -104,6 +104,9 @@
         </ol>
     </div>
 
+    <!-- RANDOM BACKGROUND SHAPES -->
+    <img src="./img/Blob1.svg" class="background-blob1">
+    <img src="./img/Blob2.svg" class="background-blob2">
 
     <!-- SIGN UP FOR NOTIFICATIONS-->
     Sign up to be notified for UES updates and applications!
@@ -113,34 +116,73 @@
     <div class="conferences-container">
         <div class="title conferences-title">Conferences</div>
 
-        <div class="conference-box">
-            <div class="conference-name">Engineering Student Societies’ Council of Ontario</div>
-            <div class="conference-mission">
-                Mission
-                <div class="conference-mission-text">
-                    Since its creation in 1987, ESSCO’s goal has been to promote “unity, continuity, and visibility
-                    among Ontario
-                    engineering students”.
+        <div class="conferences-box-container">
+            <div class="conference-box">
+                <div class="conference-name">
+                    Engineering Student Societies’ Council of Ontario
+                    <div class="conference-image"><img src="./img/essco.png" height="100px"></div>
+                </div>
+                <div class="conference-mission">
+                    Mission
+                    <div class="conference-mission-text">
+                        Since its creation in 1987, ESSCO’s goal has been to promote “unity, continuity, and visibility
+                        among Ontario engineering students.”
+                    </div>
+                </div>
+                <div class="conference-objective">
+                    Objective
+                    <div class="conference-objective-text">
+                        1. To represent undergraduate engineering students in the province of Ontario in matters of
+                        common
+                        interest, and
+                        communicate with professional associations, academia, industry and government on behalf of
+                        member
+                        schools, but never to:
+                        <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1. Align with partisan organizations; or <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2. Become involved in issues not directly
+                        related
+                        to
+                        engineering education and practice;
+                        <br>
+                        2. To facilitate centralized communication and information exchange between member engineering
+                        student
+                        societies, assist them in increasing their value to the common student;
+                        <br>
+                        3. To promote and assist other organizations in promoting engineering as an exciting,
+                        challenging,
+                        and equitable
+                        profession, especially to high school and elementary school students.
+                    </div>
                 </div>
             </div>
-            <div class="conference-objective">
-                Objective
-                <div class="conference-objective-text">
-                    1. To represent undergraduate engineering students in the province of Ontario in matters of common
-                    interest, and
-                    communicate with professional associations, academia, industry and government on behalf of member
-                    schools, but
-                    never to: 1. Align with partisan organizations; or 2. Become involved in issues not directly related
-                    to
-                    engineering education and practice;
-                    <br>
-                    2. To facilitate centralized communication and information exchange between member engineering
-                    student
-                    societies, assist them in increasing their value to the common student;
-                    <br>
-                    3. To promote and assist other organizations in promoting engineering as an exciting, challenging,
-                    and equitable
-                    profession, especially to high school and elementary school students.
+            
+            <div class="conference-box">
+                <div class="conference-name">
+                    Canadian Federation of Engineering Students (CEFS)
+                    <div class="conference-image"><img src="./img/CFES.png" height="100px"></div>
+                </div>
+                <div class="conference-mission">
+                    Mission
+                    <div class="conference-mission-text">
+                        The CFES supports growth and communication within its members to ensure their moral,
+                        intellectual, cultural, academic, social and economic well-being. The Federation represents and
+                        promotes Canadian undergraduate engineering students on a national and international level. The
+                        CFES will not align itself with any political partisan movement.
+                    </div>
+                </div>
+                <div class="conference-objective">
+                    Objective
+                    <div class="conference-objective-text">
+                        The goal of the CFES is to solicit, represent, organize and exchange views, information and
+                        activities pertinent to the goals of the members at a national level as to ensure their moral,
+                        intellectual, cultural, academic, social and economic well-being, and to improve the quality and
+                        scope of Canadian engineering education. The means by which this will be done are: Offering
+                        bilingual opportunities which foster the development of the following facets of an engineering
+                        education: Leadership, Professional and Ethical Qualities, Engineering Identity, Technical
+                        Proficiency, Communication; Providing representation on issues relevant to engineering students
+                        in Canada and affiliate itself with any organization pursuing the same goals; Promoting the free
+                        exchange of ideas and experiences to support the constant evolution of student environments
+                        across Canada.
+                    </div>
                 </div>
             </div>
         </div>
