--- a/join.html
+++ b/join.html
@@ -88,6 +88,7 @@
     <!-- Mobile Menu -->
     <div class="menu-mobile-container">
         <div class="menu-button" id="menu-button">&#8801;</div>
+        <div class="menu-close-button" id="menu-close-button"></div>
         <ol class="menu-mobile-items" id="menu-mobile">
             <li><a href="/about">About</a></li>
             <li><a href="/events">Events</a></li>
@@ -105,8 +106,8 @@
     </div>
 
     <!-- RANDOM BACKGROUND SHAPES -->
-    <img src="./img/Blob1.svg" class="background-blob1">
-    <img src="./img/Blob2.svg" class="background-blob2">
+    <img src="./img/Blob4.svg" class="background-blob1">
+    <img src="./img/Blob3.svg" class="background-blob2">
 
     <!-- SIGN UP FOR NOTIFICATIONS-->
     Sign up to be notified for UES updates and applications!
@@ -153,8 +154,10 @@
                         profession, especially to high school and elementary school students.
                     </div>
                 </div>
+                <br>
+                <a class="cta-button">Learn More</a>
             </div>
-            
+
             <div class="conference-box">
                 <div class="conference-name">
                     Canadian Federation of Engineering Students (CEFS)
@@ -184,9 +187,19 @@
                         across Canada.
                     </div>
                 </div>
+                <br>
+                <a class="cta-button">Learn More</a>
             </div>
         </div>
     </div>
+
+    <!-- BLOG -->
+    <div class="blog-container" id="blog">
+        <div class="blog-title">UES Blog</div>
+
+        <div></div>
+    </div>
+
 
     <!-- FOOTER -->
     <div class="footer">
