--- a/wellness.html
+++ b/wellness.html
@@ -19,22 +19,144 @@
 </head>
 
 <body>
-    <!-- MENU -->
-    <div class="menu-container">
-        <ol>
-            <a href="/"><img src="img/logo.png" class="menu-image"></a>
-            <div class="menu-items">
-                <li><a href="/about">About</a></li>
-                <li><a href="/events">Events</a></li>
-                <li><a href="/join">Join Us</a></li>
-                <li><a href="/shop">Store</a></li>
-                <li><a href="/spaces">Spaces</a></li>
-                <li><a href="/clubs">Clubs</a></li>
-                <li>Committees</li>
-            </div>
-        </ol>
-        <div class="menu-button"></div>
+<!-- MENU -->
+<div class="menu-container">
+    <ol>
+        <a href="/"><img src="img/logo.png" class="menu-image"></a>
+        <div class="menu-items">
+            <li id="menu-about">
+                <a href="/about" class="menu-top-item">Western</a>
+                <div class="menu-dropdown" id="western-dropdown">
+                    <div class="dropdown-item"><a href="/about">About Us</a></div>
+                    <div class="dropdown-item"><a href="/about#culture">Culture</a></div>
+                    <div class="dropdown-item menu-bottom-item"><a href="/about#contact">Contact Us</a></div>
+                </div>
+            </li>
+            <li id="menu-join">
+                <a href="/join" class="menu-top-item">Join Us</a>
+                <div class="menu-dropdown" id="join-dropdown">
+                    <div class="dropdown-item"><a href="/clubs">Clubs</a></div>
+                    <div class="dropdown-item"><a href="">Conferences</a></div>
+                    <div class="dropdown-item"><a href="">Events</a></div>
+                    <div class="dropdown-item"><a href="">Wellness Committee</a></div>
+                    <div class="dropdown-item"><a href="">Sustainability Committee</a></div>
+                    <div class="dropdown-item"><a href="">Discord Committee</a></div>
+                    <div class="dropdown-item menu-bottom-item"><a href="">Blogs</a></div>
+                </div>
+            </li>
+            <li id="menu-council">
+                <a href="/team" class="menu-top-item">Council</a>
+                <div class="menu-dropdown" id="council-dropdown">
+                    <div class="dropdown-item"><a href="/team">Operations</a></div>
+                    <div class="dropdown-item"><a href="/team">Our Team</a></div>
+                    <div class="dropdown-item menu-bottom-item"><a href="">Elections</a></div>
+                </div>
+            </li>
+            <li id="menu-admin">
+                <a href="/admin" class="menu-top-item">Admin</a>
+                <div class="menu-dropdown" id="admin-dropdown">
+                    <div class="dropdown-item"><a href="/team">Council Resources</a></div>
+                    <div class="dropdown-item"><a href="/team">Exec Updates</a></div>
+                    <div class="dropdown-item"><a href="">Finances</a></div>
+                    <div class="dropdown-item"><a href="">Governing Docs</a></div>
+                    <div class="dropdown-item menu-bottom-item"><a href="">SRA</a></div>
+            </li>
+            <li id="menu-store">
+                <a href="/store" class="menu-top-item">Eng Merch</a>
+                <div class="menu-dropdown" id="store-dropdown">
+                    <div class="dropdown-item"><a href="/shop">+/- Store</a></div>
+                    <div class="dropdown-item"><a href="/jacket">Boilersuits</a></div>
+                    <div class="dropdown-item menu-bottom-item"><a href="/jacket">Eng Jackets</a></div>
+                </div>
+            </li>
+            <li id="menu-coop">
+                <a href="/coop" class="menu-top-item">Co-op</a>
+                <div class="menu-dropdown" id="coop-dropdown">
+                    <div class="dropdown-item menu-bottom-item"><a href="">Academic Resources</a></div>
+                </div>
+            </li>
+            <li id="menu-campaign">
+                <a href="/campaign" class="menu-top-item">EDI</a>
+                <div class="menu-dropdown" id="campaign-dropdown">
+                    <div class="dropdown-item menu-bottom-item"><a href="">Action Plan</a></div>
+                </div>
+            </li>
+        </div>
+    </ol>
+</div>
+
+<!-- Mobile Menu -->
+<div class="menu-mobile-container">
+    <div id="menu-button">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
+    <ol>
+        <div class="mobile-menu-items" id="menu-mobile">
+            
+            <li class="mobile-menu-item">
+                <a class="mobile-menu-top-item">Western</a>
+                <div class="mobile-menu-dropdown">
+                    <div class="mobile-dropdown-item"><a href="/about">About Us</a></div>
+                    <div class="mobile-dropdown-item"><a href="/about#culture">Culture</a></div>
+                    <div class="mobile-dropdown-item"><a href="/about#contact">Contact Us</a></div>
+                </div>
+            </li>
+            <li class="mobile-menu-item">
+                <a class="mobile-menu-top-item">Join Us</a>
+                <div class="mobile-menu-dropdown">
+                    <div class="mobile-dropdown-item"><a href="/clubs">Clubs</a></div>
+                    <div class="mobile-dropdown-item"><a href="/join">Conferences</a></div>
+                    <div class="mobile-dropdown-item"><a href="/events">Events</a></div>
+                    <div class="mobile-dropdown-item"><a href="/wellness">Wellness Committee</a></div>
+                    <div class="mobile-dropdown-item"><a href="/sustainability">Sustainability Committee</a></div>
+                    <div class="mobile-dropdown-item"><a href="/discord">Discord Committee</a></div>
+                    <div class="mobile-dropdown-item"><a href="/join#blog">Blogs</a></div>
+                </div>
+            </li>
+            <li class="mobile-menu-item">
+                <a class="mobile-menu-top-item">Council</a>
+                <div class="mobile-menu-dropdown">
+                    <div class="mobile-dropdown-item"><a href="/team">Operations</a></div>
+                    <div class="mobile-dropdown-item"><a href="/team">Our Team</a></div>
+                    <div class="mobile-dropdown-item"><a href="/team">Elections</a></div>
+                </div>
+            </li>
+            <li class="mobile-menu-item">
+                <a class="mobile-menu-top-item">Admin</a>
+                <div class="mobile-menu-dropdown">
+                    <div class="mobile-dropdown-item"><a href="/admin">Council Resources</a></div>
+                    <div class="mobile-dropdown-item"><a href="/admin">Exec Updates</a></div>
+                    <div class="mobile-dropdown-item"><a href="/admin">Finances</a></div>
+                    <div class="mobile-dropdown-item"><a href="/admin">Governing Docs</a></div>
+                    <div class="mobile-dropdown-item"><a href="/admin">SRA</a></div>
+            </li>
+            <li class="mobile-menu-item">
+                <a class="mobile-menu-top-item">Eng Merch</a>
+                <div class="mobile-menu-dropdown">
+                    <div class="mobile-dropdown-item"><a href="/shop">+/- Store</a></div>
+                    <div class="mobile-dropdown-item"><a href="/jacket">Boilersuits</a></div>
+                    <div class="mobile-dropdown-item"><a href="/jacket">Eng Jackets</a></div>
+                </div>
+            </li>
+            <li class="mobile-menu-item">
+                <a class="mobile-menu-top-item">Co-op</a>
+                <div class="mobile-menu-dropdown">
+                    <div class="mobile-dropdown-item"><a href="/coop">Academic Resources</a></div>
+                </div>
+            </li>
+            <li class="mobile-menu-item">
+                <a class="mobile-menu-top-item">EDI</a>
+                <div class="mobile-menu-dropdown" id="campaign-dropdown-mobile">
+                    <div class="mobile-dropdown-item mobile-menu-bottom-item"><a href="/action">Action Plan</a>
+                    </div>
+                </div>
+            </li>
+        </div>
+    </ol>
+</div>
 
     <!-- GET INVOLVED -->
     
